fix text cutoff

--- a/style.css
+++ b/style.css
@@ -101,6 +101,8 @@ hr {
 .text-body {
   color: #7a7a74;
   margin-bottom: 30px;
+  height: auto;
+  width: auto;
 }
 
 .header {
